fixed fb-like button overlapped problem

--- a/src/style_.css
+++ b/src/style_.css
@@ -38,6 +38,7 @@ img{
 
 #share-block-top{
     margin-top: 0;
+    padding-top: 100px;
 }
 
 #mountains{
@@ -470,26 +471,6 @@ footer a {
     height: 104.98px;
 }
 
-.share-block{
-    padding-top: 100px;
-    height: 40px;
-}
-
-.fb-like-block{
-    float: left;
-}
-
-.line-block{
-    float: left;
-    cursor: pointer;
-    margin-left: 5px;
-    margin-top: 1px;
-}
-
-.line-block img{
-    width: initial;
-}
-
 .logo-block {
     margin-top: 0;
 }
@@ -692,10 +673,6 @@ footer a {
         padding-right: 0;
     }
 
-    .share-block{
-        height: auto;
-    }
-
     #report .col-sm-6{
         clear: both;
     }
@@ -839,7 +816,7 @@ footer a {
     }
 }
 
-.fb_iframe_widget {
+.fb-post.fb_iframe_widget {
     width: 1px!important;
     max-width: 100%!important;
     min-width: 100%!important;
